fix: 'sun.security.krb5' unmoduled in jdk16+
Signed-off-by: Curtis Wan <wcy9988@163.com>